# ipc-lock

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs
src/sys/: mod.rs  unix.rs  windows.rs
tests/: crash_recovery.rs
