[package]
name = "ipc-lock"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["windseeker1024 <helloworldgnu@gmail.com>"]
license = "MIT"
description = "Cross-process named locks using std::fs::File::lock() on Unix and CreateMutexW on Windows"
readme = "README.md"
keywords = ["ipc", "lock", "process", "cross-process", "named-lock"]
categories = ["os", "concurrency"]
exclude = [".github/", ".gitignore", "Cargo.lock"]
repository = "https://github.com/windseeker1024/ipc-lock"
homepage = "https://github.com/windseeker1024/ipc-lock"
documentation = "https://docs.rs/ipc-lock"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[package.metadata.docs.rs]
# Document the Unix-specific API (with_path) on docs.rs
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
